--- a/index.ipynb
+++ b/index.ipynb
@@ -2049,7 +2049,7 @@
    "outputs": [],
    "source": [
     "area_values = []\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['Name'], cities[1]['Name'], cities[2]['Name']], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [are]}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['Name'], cities[1]['Name'], cities[2]['Name']], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [area_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0]['Name'], cities[1]['Name'], cities[2]['Name']], 'y': [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': []}"
    ]
   },
